fix: remove custom cursor, change lazy loading to eager for first event images, remove content-visibility

--- a/msquare-angular/src/app/events/events.component.scss
+++ b/msquare-angular/src/app/events/events.component.scss
@@ -67,8 +67,6 @@
   scroll-snap-align: start;
   display: flex;
   flex-direction: column;
-  content-visibility: auto; /* Massive performance boost */
-  contain-intrinsic-size: 82vw 600px;
 }
 
 @media (max-width: 768px) {
